[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ku-weaviate"
version = "0.1.0"
description = "Two-layer temporal governance for RAG: Weaviate Boost.decay + Knowledge Universe"
requires-python = ">=3.11"
dependencies = [
    "weaviate-client>=4.0.0",
    "httpx>=0.26.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "black", "mypy"]